(Untested) improvements
+ Found a few more things to mark as final